--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,23 @@ target/
 .idea/
 .vscode/
 *.iml
+
+# Java
+*.class
+*.log
+*.ctxt
+hs_err_pid*
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+release.properties
+
+# IDE / OS
+.vscode/
+.idea/
+*.iml
+.DS_Store
+Thumbs.db
