Adding headers to tag learning-by-building and copy-this boilerplate

--- a/copilot-api/src/main/resources/application.yml
+++ b/copilot-api/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+# === COPY-THIS BOILERPLATE ============================================
+# Service ports & datasource. Tune pool sizes only if needed.
+# Dev knobs to revisit in prod: connection pool sizes, timeouts, logging.
+# ======================================================================
+
 server:
   port: ${SERVER_PORT:8080}
 
