--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,6 @@
+<!-- === COPY-THIS BOILERPLATE =========================================
+Dependency management & plugins. Keep pinned versions stable.
+==================================================================== -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
